<resources>
    <string name="app_name">Discount Calculator</string>
    <string name="itemPrice">Item Price:</string>
    <string name="Sale">Sale %</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
    <string name="eighteen">18%</string>
    <string name="custom">Custom</string>
    <string name="listPrice">Enter List Price</string>
    <string name="customSlide">Custom %</string>
    <string name="discount">Discount:</string>
    <string name="finalPrice">Final Price:</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="initialDiscount">0.00</string>
    <string name="initialFinal">0.00</string>


</resources>